cabal-version:       2.4

name:                gump
version:             0.1.0
synopsis:            Figuring out decision trees and random forests.
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Juri Chomé
maintainer:          juri.chome@gmail.com
copyright:           Juri Chomé
category:            Machine Learning
extra-source-files:  Readme.md, Spec.md

library
  exposed-modules:
      ID3
  other-modules:
      Impurity
    , TestData
    , ID3Simple
    , ID3Massiv
  build-depends:
      base >=4.11.0.0
    , text
    , bytestring
    , containers
    , pretty-show
    -- , vector
    , massiv
    -- , cassava
    -- , hmatrix
    -- , Frames
    -- , Chart
    -- , sv
  hs-source-dirs: src
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
  default-language: Haskell2010
