cabal-version:       2.4

name:                gump
version:             0.1.0
synopsis:            Figuring out decision trees and random forests.
description:         Random forest, but dumb.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Juri Chomé
maintainer:          juri.chome@gmail.com
copyright:           Juri Chomé
category:            Machine Learning
extra-source-files:  Readme.md, Spec.md

library
  exposed-modules:
      ID3
    , Impurity
    , ImpurityMassiv
  other-modules:
      TestData
    , ID3Simple
    , ID3Massiv
    , Feature
  build-depends:
      base >=4.11.0.0
    , text
    , bytestring
    , containers
    , pretty-show
    , hashable
    , massiv
    , mtl
    , vector
    , unordered-containers
    , cassava
    , fgl
  hs-source-dirs: src
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
  default-language: Haskell2010

benchmark impurity
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             BenchImpurity.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , gump
                     , massiv
                     , random
  default-language:    Haskell2010
